.k8s/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxy
  annotations:
    description: CourseMapper-webserver
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: cmw-dev.sc.lb.inko.cloud
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: webapp
            port:
              number: 80
      - pathType: Prefix
        path: /api/
        backend:
          service:
            name: webserver
            port:
              number: 81
  tls:
  - secretName: tls-certificate
    hosts:
    - cmw-dev.sc.lb.inko.cloud
